<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps</string>

    <string name="course_name_1">Spotify Streamer</string>
    <string name="course_name_2">Scores App</string>
    <string name="course_name_3">Library App</string>
    <string name="course_name_4">Build It Bigger</string>
    <string name="course_name_5">XYZ Reader</string>
    <string name="course_name_6">Capstone</string>
    <string name="action_settings">Settings</string>
</resources>
