<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue_text" />

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/orange"
        android:onClick="onClick"
        android:text="@string/course_name_1"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/orange"
        android:onClick="onClick"
        android:text="@string/course_name_2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/orange"
        android:onClick="onClick"
        android:text="@string/course_name_3"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/orange"
        android:onClick="onClick"
        android:text="@string/course_name_4"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/orange"
        android:onClick="onClick"
        android:text="@string/course_name_5"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="24dp"
        android:background="@color/darkpurple"
        android:onClick="onClick"
        android:text="@string/course_name_6"
        android:textColor="@android:color/white" />

</RelativeLayout>
